--- a/PlatformerGame/PlatformerGame.vcxproj
+++ b/PlatformerGame/PlatformerGame.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{C974E9B7-5A3D-47BE-8833-95D710FB2744}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>MonsterChaseGame</RootNamespace>
+    <RootNamespace>PlatformerGame</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
     <ProjectName>PlatformerGame</ProjectName>
   </PropertyGroup>
