Added Unit Test File and made modifications and notes in Smart Pointer class

--- a/KPEngine_Test/KPEngine_Test.vcxproj.filters
+++ b/KPEngine_Test/KPEngine_Test.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="BitArray_UnitTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SmartPointer_UnitTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Library Include="Externals\HeapManager-Debug-x64.lib" />
