--- a/KPEngine_Test/KPEngine_Test.vcxproj
+++ b/KPEngine_Test/KPEngine_Test.vcxproj
@@ -189,6 +189,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SmartPointer_UnitTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Externals\HeapManager-Debug-x64.lib" />
