Renamed file. Added Function Definitions. Added Weak Pointers

--- a/KPEngine/KPEngine.vcxproj.filters
+++ b/KPEngine/KPEngine.vcxproj.filters
@@ -146,7 +146,7 @@
     <ClInclude Include="include\Input\InputSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\Utils\StrongPointer.h">
+    <ClInclude Include="include\Utils\SmartPointers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
