--- a/KPEngine/KPEngine.vcxproj
+++ b/KPEngine/KPEngine.vcxproj
@@ -186,7 +186,7 @@
     <ClInclude Include="include\Physics\PhysicsSystem.h" />
     <ClInclude Include="include\Core\Time\TimeSystem.h" />
     <ClInclude Include="include\Input\InputSystem.h" />
-    <ClInclude Include="include\Utils\StrongPointer.h" />
+    <ClInclude Include="include\Utils\SmartPointers.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Input\InputSystem.cpp" />
