Forgot Project Up date

--- a/KPEngine/KPEngine.vcxproj.filters
+++ b/KPEngine/KPEngine.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="src\Scripting\Lua\LuaSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Utils\KPVector4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Utils\List.h">
@@ -153,6 +156,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Scripting\Lua\LuaSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Utils\KPVector4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
