--- a/KPEngine/KPEngine.vcxproj
+++ b/KPEngine/KPEngine.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="include\Input\InputSystem.h" />
     <ClInclude Include="include\Utils\SmartPointers.h" />
     <ClInclude Include="include\Scripting\Lua\LuaSystem.h" />
+    <ClInclude Include="include\Utils\KPVector4.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Scripting\Lua\LuaSystem.cpp" />
@@ -208,6 +209,7 @@
     <ClCompile Include="src\Physics\PhysicsSystem.cpp" />
     <ClCompile Include="src\Utils\KPString.cpp" />
     <ClCompile Include="src\Utils\KPVector2.cpp" />
+    <ClCompile Include="src\Utils\KPVector4.cpp" />
     <ClCompile Include="src\Utils\KP_Log.cpp" />
     <ClCompile Include="src\Core\Time\TimeSystem.cpp" />
   </ItemGroup>
