--- a/PlatformerGame/PlatformerGame.vcxproj.filters
+++ b/PlatformerGame/PlatformerGame.vcxproj.filters
@@ -67,6 +67,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Gamesrc\Player.lua" />
+    <None Include="Gamesrc\Player.lua">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
