--- a/KPEngine_Test/KPEngine_Test.vcxproj
+++ b/KPEngine_Test/KPEngine_Test.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="FixedHeapManager_UnitTest.cpp" />
     <ClCompile Include="DynamicHeapManager_UnitTest.cpp" />
     <ClCompile Include="KPEngine_Test.cpp" />
+    <ClCompile Include="KPMatrix4x4_UnitTest.cpp" />
     <ClCompile Include="KPVector2_UnitTest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
