Added Basic Bare Bones Collision Detection. And fixed a bug

--- a/PlatformerGame/PlatformerGame.vcxproj.filters
+++ b/PlatformerGame/PlatformerGame.vcxproj.filters
@@ -56,5 +56,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\src\Player.lua" />
+    <None Include="Assets\src\Monster.lua" />
   </ItemGroup>
 </Project>
