--- a/PlatformerGame/PlatformerGame.vcxproj
+++ b/PlatformerGame/PlatformerGame.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="src\GameMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\src\Monster.lua" />
     <None Include="Assets\src\Player.lua" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
