--- a/KPEngine/KPEngine.vcxproj.filters
+++ b/KPEngine/KPEngine.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="src\Core\Core.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Utils\KPVector3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Utils\List.h">
