--- a/KPEngine/KPEngine.vcxproj.filters
+++ b/KPEngine/KPEngine.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="src\Utils\KPVector3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Messaging\MessagingSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Utils\List.h">
@@ -195,6 +198,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Core\Core.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Messaging\MessagingSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
