Fixed a issue where I was not grabbing sprite information from the lua file

--- a/PlatformerGame/PlatformerGame.vcxproj.filters
+++ b/PlatformerGame/PlatformerGame.vcxproj.filters
@@ -57,5 +57,6 @@
   <ItemGroup>
     <None Include="Assets\src\Player.lua" />
     <None Include="Assets\src\Monster.lua" />
+    <None Include="Assets\src\Platform.lua" />
   </ItemGroup>
 </Project>
